# rubato

./: .gitignore  26042101_kb_query.txt  26042102_CLAUDE.txt  AGENTS.md  QUICK_START.md  README.md  README_EN.md  package-lock.json  package.json  pyproject.toml  requirements.txt  rubato.txt
config/: agent_config.yaml  agent_config.yaml.example  mcp_config.yaml  mcp_config.yaml.example  model_config.yaml  model_config.yaml.example  project_config.yaml  project_config.yaml.example  prompt_config.yaml  prompt_config.yaml.example  skills_config.yaml  skills_config.yaml.example  test_config.yaml  tools_config.yaml  tools_config.yaml.example
docs/: api_module_design.md  cli_module_design.md  commands_module_design.md  config_module_design.md  context_module_beginner_guide.md  context_module_design.md  core_module_design.md  design.md  framework_design.md  mcp_module_design.md  skills_module_beginner_guide.md  skills_module_design.md  tools_module_design.md  utils_module_design.md
prompts/: skill_loading_prompt.txt  system_prompt.txt
skills/: knowledge-query.md  test-execution.md
src/: __init__.py  main.py
sub_agents/: element-locator.yaml  knowledge-query.yaml  snapshot-analyzer.yaml
tests/: QUERY_ENGINE_TEST_SUMMARY.md  commands_skill_test.py  run_test_suite_executor_e2e.bat  run_test_suite_executor_e2e.ps1  simple_verify.py  task_intent_manager_test.py  test_case_executor_playwright_cli_e2e.py  test_case_generator_e2e.py  test_case_generator_e2e_report.md  test_config_integration.py  test_config_merge.py  test_config_models_update.py  test_file_tools.py  (+36 more)
(+203 files in other folders)
